# BK-Precision-PowerSupply-MCP

./: .gitignore  B&K_PSU-MCP_plan.md  CLAUDE.md  README.md  pyproject.toml
src/bk_precision_mcp/: connection.py  registry.py  safety.py  server.py  session.py
src/bk_precision_mcp/drivers/: base.py  driver_1685b.py  driver_9103.py  driver_scpi.py
src/bk_precision_mcp/instruments/: base.py  function_gen.py  multimeter.py  oscilloscope.py  power_supply.py
src/bk_precision_mcp/models/: registry.json
src/bk_precision_mcp/tools/: connection.py  discovery.py  function_gen.py  multimeter.py  oscilloscope.py  power_supply.py
src/bk_precision_mcp/transport/: visa.py
tests/: test_connection.py  test_drivers.py  test_safety.py  test_tools.py
tests/mocks/: mock_1685b.py  mock_9103.py  mock_scpi.py
