[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bk-precision-mcp"
version = "0.1.0"
description = "MCP server for BK Precision test and measurement instruments"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyvisa>=1.14.0",
    "pyvisa-py>=0.7.0",
]

[project.scripts]
bk-precision-mcp = "bk_precision_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bk_precision_mcp"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
